--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "yuhua shi",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
